2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* Makefile.am:
	* linux-proc.c: (GetNet):
	* load-graph.c: (load_graph_update), (load_graph_unalloc),
	(load_graph_alloc):
	* loadavg.c:
	* main.c: (multiload_applet_tooltip_update):
	* memload.c:
	* netload.c:
	* properties.c:
	* swapload.c:
	
	Cleanup :
	- Added explicit dep on libgnome and libgnomeui
	- Added missing #include.
	- Fixed signedness warnings.

2005-05-31  Benoît Dejean  <TazForEver@dlfp.org>

	* global.h:
	* load-graph.c: (shift_right), (load_graph_draw),
	(load_graph_update), (load_graph_unalloc), (load_graph_alloc):
	Removed uneeded LoadGraph::odata and do the shift in-place.

2005-05-09  Dennis Cranston <dennis_cranston@yahoo.com>

	* Makefile.am:  Added gnome-desktop cflags and libs.
	* main.c:  (start_procman):  Use startup notification 
	to launch gnome-system-monitor.

2005-03-20  Davyd Madeley  <davyd@madeley.id.au>

	* linux-proc.c: Make the CPU graph work on Linux 2.4 again. Closes
	#170921. Patch by Tommi Komulainen <tommi.komulainen@iki.fi>.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* cpuload.c:
	* diskload.c:
	* global.h:
	* load-graph.c: (load_graph_alloc):
	* load-graph.h:
	* loadavg.c:
	* main.c:
	* memload.c:
	* netload.c:
	* properties.c:
	* swapload.c: Clean up compiler warnings and headers.

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/multiload.xml: Update documentation for GNOME 2.10.

	* docs/C/figures/: Remove old figures, add new preferences figure.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* main.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-01-18  Benoît Dejean  <TazForEver@dlfp.org>

	* main.c: (about_cb): Changed my email.

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* autoscaler.c: (autoscaler_get_max): 1-line cleanup.
	
	* autoscaler.h:
	* global.h:
	* linux-proc.h:
	* load-graph.h:
	* properties.h: G_GNUC_INTERNAL love.
