@@ -1,3 +1,8 @@
+2005-07-17  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* main.c: (multiload_applet_tooltip_update):
+	Fixed i18n plural.
+
 2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* Makefile.am:
